@@ -5,7 +5,7 @@
 
 <widget class="GtkWindow" id="gPodder">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">gPodder - your podcast catcher.</property>
+  <property name="title" translatable="no">gPodder</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER</property>
   <property name="modal">False</property>
